infra/kubernetes/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinelx-security-cloud
  labels:
    name: sentinelx-security-cloud
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
